fix: renomear Gabriela para gabriela em todos os workflows

--- a/.github/workflows/deploy-all.yml
+++ b/.github/workflows/deploy-all.yml
@@ -81,7 +81,7 @@ jobs:
       - name: 🎉 Success
         run: |
           echo "════════════════════════════════════════════"
-          echo "🎉 GABRIELA - DEPLOY COMPLETO"
+          echo "🎉 gabriela - DEPLOY COMPLETO"
           echo "════════════════════════════════════════════"
           echo ""
           echo "🐳 Backend:  ghcr.io/${{ github.repository }}/backend:${{ github.sha }}"
