feat: adicionar políticas GitHub completas
- SECURITY.md, CODE_OF_CONDUCT.md, CONTRIBUTING.md

- Dependabot, Issue Templates, PR Template

- SECRETS_SETUP.txt com todas as credenciais

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -9,9 +9,9 @@ contact_links:
     about: Consulte a documentação oficial
 
   - name: 🔒 Vulnerabilidade de Segurança
-    url: mailto:security@avila.inc
+    url: https://github.com/avilaops/gabriela/security/advisories/new
     about: Reporte vulnerabilidades de segurança de forma privada
 
   - name: 🆘 Suporte
-    url: mailto:support@avila.inc
+    url: https://avila.inc/support
     about: Suporte técnico e dúvidas sobre uso
